--- a/subprojects/docs/src/docs/userguide/buildCache.adoc
+++ b/subprojects/docs/src/docs/userguide/buildCache.adoc
@@ -250,7 +250,7 @@ These issues may affect the number of cache hits you get between machines.
 
 | Using cached C/C++ object files with absolute paths
 | When Gradle compiles C/C++ code, object files tend to have absolute paths embedded inside them. This doesn't affect their correctness, but it can interfere with debuggers that search for source code at those absolute paths.
-| Use identical absolute paths for projects sharing a build cache.
+| Build the project from the same absolute path on every machine.
 
 | Line endings in build scripts files.
 | Gradle calculates the build cache key based on the MD5 hash of the build script contents. If the line endings are different between developers and the CI servers, Gradle will calculate different build cache keys even when all other inputs to a task are the same.
