--- a/subprojects/docs/src/docs/userguide/gradleCommandLine.adoc
+++ b/subprojects/docs/src/docs/userguide/gradleCommandLine.adoc
@@ -102,7 +102,7 @@ Creates a build scan. Gradle will auto-apply the build scan plugin with a compat
 Disables the creation of a build scan. For more information about build scans, please visit https://gradle.com/build-scans[https://gradle.com/build-scans].
 `-t`, `--continuous (incubating)`::
 Enables <<continuous_build,continuous building>> - Gradle will automatically re-run when changes are detected.
-`-u`, `--no-search-upward`::
+`-u`, `--no-search-upward` (deprecated)::
 Don't search in parent directories for a `settings.gradle` file.
 `-v`, `--version`::
 Prints version info.
