--- a/subprojects/docs/src/docs/userguide/initScripts.adoc
+++ b/subprojects/docs/src/docs/userguide/initScripts.adoc
@@ -79,7 +79,7 @@ In <<sec:build_script_external_dependencies>> it was explained how to add extern
         </sample>
 ++++
 
-The closure passed to the `initscript()` method configures a api:org.gradle.api.initialization.dsl.ScriptHandler[] instance. You declare the init script classpath by adding dependencies to the `classpath` configuration. This is the same way you declare, for example, the Java compilation classpath. You can use any of the dependency types described in <<sec:how_to_declare_your_dependencies>>, except project dependencies.
+The closure passed to the `initscript()` method configures a api:org.gradle.api.initialization.dsl.ScriptHandler[] instance. You declare the init script classpath by adding dependencies to the `classpath` configuration. This is the same way you declare, for example, the Java compilation classpath. You can use any of the dependency types described in <<sec:declaring_dependencies>>, except project dependencies.
 
 Having declared the init script classpath, you can use the classes in your init script as you would any other classes on the classpath. The following example adds to the previous example, and uses classes from the init script classpath.
 
